--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-
+		
 		<nav class="navbar navbar-inverse" role="navigation">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,12 +31,24 @@
 		      </ul>
 		      
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Log in</a></li>
-		        <li><a href="#">Log out</a></li>
+		      	<% if user_signed_in? %>
+        	  		<li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+      			<% else %>
+        	  		<li><%= link_to 'Sign in', new_user_session_path %></li>
+        	  		<li><%= link_to 'Sign up', new_user_registration_path %></li>
+      			<% end %>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
+
+
+		<% if notice.present? %>
+  			<p class="alert alert-info"><%= notice %></p>
+		<% end %>
+		<% if alert.present? %>
+  			<p class="alert alert-danger"><%= alert %></p>
+		<% end %>
 
 		<%= yield %>
 
